# FIFO-calculator

./: CMakeLists.txt  README.md  vcpkg.json
Source/: CMakeLists.txt  fifo_calculator.cppm  fifo_calculator.tests.cpp  main.cpp
